--- a/README
+++ b/README
@@ -2,4 +2,4 @@ Wrapped socket library, Written in VB.NET
 
 Made as a VB.NET version of SinZationalSockets, to alieviate issues caused by the different languages.
 
-Used in VB Minebot.
+Used in VB Minebot, and C# Minebot.
